# TCP-IP-Messenger-Application

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PROTOCOL.md  STARTER_PROMPT.md  TEST_CASES.md  TEST_PLAN.md  TEST_REPORT.md
scripts/: create_icon.py
src/: __init__.py  app.py  app_info.py  instance.py  instance_manager.py  main.py
src/network/: __init__.py  client.py  handler.py  server.py
src/protocol/: __init__.py  auto_response.py  errors.py  messages.py  serializer.py  validator.py
src/ui/: __init__.py  components.py  compose_form.py  detail_panel.py  main_view.py  message_log.py  periodic_panel.py  split_view.py  status_bar.py  tab_bar.py  theme.py  toast.py  tooltip.py  welcome_screen.py
src/utils/: defaults.py  timestamp.py
tests/: conftest.py  test_auto_response.py  test_framing.py  test_integration.py  test_messages.py  test_serializer.py  test_unknown_message.py  test_validator.py
