[project]
name = "tcp-tactical-messenger"
version = "1.0.0"
description = "TCP/IP tactical messaging desktop application"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "src/ui/*"]

[tool.coverage.report]
fail_under = 90
include = ["src/protocol/*"]
